--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>九个小孩</title>
     <link rel="stylesheet" href="./static/common.css">
-    <link rel="stylesheet" href="./static/animate.min.css">
+    <!--<link rel="stylesheet" href="./static/animate.min.css">-->
   </head>
   <body>
     <div id="app"></div>
