修改关于和新闻背景颜色

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>九个小孩</title>
+    <title>九个小孩儿童自行车租赁服务平台官方网站 1笔消费满足整个童年自行车使用</title>
+    <meta name="keywords" content="儿童自行车,儿童滑步车,儿童平衡车,儿童骑车,儿童买自行车,儿童选择自行车,12寸自行车,14寸自行车,18寸自行车" />
+    <meta name="description" content="九个小孩是国内首家互联网高端儿童自行车租赁平台，针对于12岁以下儿童提供儿童自行车长租的消费服务体验，主打不合适，随时换，不需要，随时退的服务宗旨，为家长提供高品质、高安全、高性价比的儿童自行车租赁服务体验。" />
     <link rel="stylesheet" href="./static/common.css">
     <!--<link rel="stylesheet" href="./static/animate.min.css">-->
   </head>
